# DumPy

./: LICENSE  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
dumpy/: __init__.py  matrix.py  matrix_core.py  matrix_mp.py  matrix_st.py  time_func.py
dumpy/fft/: __init__.py  fft.py
dumpy/linalg/: L1.py  L2.py  L3.py  __init__.py  bench.py  matrix.py  matrix_core.py  matrix_mp.py  print.py  rand.py  time_func.py
dumpy/trig/: __init__.py  trig.py
tests/: test_fft.py  test_linalg_L1.py  test_linalg_L2.py  test_linalg_L3.py  test_matrix.py  test_trig.py
