[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DumPy"
authors = [
    {name = "Aurora Pereira", email = "aupereira@umass.edu"}
]
description = "A basic library written in pure Python that implements some basic math functions built from scratch. The library also includes scheduling logic for multithreaded matrix operations."
# license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = []
version = "0.1.0_a1"